Fix order price-buttons whitespace

--- a/Frontend/www/assets/less/main.less
+++ b/Frontend/www/assets/less/main.less
@@ -173,8 +173,6 @@ footer{
     font-size: 12px;
     color: darkgray;
 }
-.image-container{
-}
 .image{
     width: 100%;
     height: 100%;
@@ -300,12 +298,14 @@ footer{
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
+
+    height: inherit;
 }
 .order-name{
     color:orange;
     font-size: 20px;
     font-weight: bold;
-
+    white-space: initial;
 }
 .order-parameters{
     .pizza-variant-parameters();
@@ -319,6 +319,11 @@ footer{
     display: flex;
     justify-content: center;
 }
+.order-controls-buttons{
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+}
 .order-price{
     .pizza-price();
     flex-direction: row;
@@ -328,11 +333,14 @@ footer{
     .price, .currency{
         font-size: 20px;
     }
+    min-width: 100px;
 }
 .order-quantity{
     font-weight: bold;
     display: flex;
+    align-self: center;
     align-items: center;
+    justify-content: center;
 }
 .order-remove-button, .order-minus-button, .order-plus-button{
     cursor: pointer;
@@ -360,12 +368,14 @@ footer{
     border: 2px solid darkgrey;
 }
 
-
 .order-image{
+    width: fit-content;
+    flex: 0 0 auto;
     position: absolute;
     height: 85%;
     --height: height;
     right: -70px;
+    height: inherit;
 }
 .cart-proceed-container{
     display: flex;
